--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "start": "node ./build",
     "prisma-studio": "prisma studio",
     "prisma-generate": "prisma generate"
-    
   },
   "author": "",
   "license": "ISC",
@@ -21,12 +20,13 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^9.7.0",
+    "googleapis": "^134.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.9"
   },
   "devDependencies": {
-    "@types/nodemailer": "^6.4.14",
     "@types/bcryptjs": "^2.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -34,6 +34,7 @@
     "@types/http-errors": "^2.0.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.1.0",
+    "@types/nodemailer": "^6.4.14",
     "prisma": "^5.3.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
